--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:k8INM6ynEYDC+paEhsa/JFDCCrfPVaC1aLD8LmuhAao=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,7 +10,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=test_app
+DB_DATABASE=nama_database
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -49,3 +49,6 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FAKER_LOCALE=id_ID
+FILESYSTEM_DRIVER=public
